2018-08-16 Massimo Manghi <mxmanghi@apache.org>
    * .gitignore: add file copied from master
    * doc/rivet.xml.in: removed no more supported SVN keywords

2018-07-07 Massimo Manghi <mxmanghi@apache.org>
    * Changelog: released as rivet 3.0.2

2018-06-25 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl.it: the error handler of error scripts requires
    ::Rivet::script to keep the actual 'script' being run
 
2018-06-14 Massimo Manghi <mxmanghi@apache.org>
    * rivet/init.tcl: fixed bug in error scripts' error handling (the
    case of handling an error that occurs in the default error script may
    need the introduction of a new test)

2018-04-09 Massimo Manghi <mxmanghi@apache.org>
    * src/mod_rivet_ng/mod_rivet.h: changing argument list of function
    *mpm_thread_interp in the bridge interface. It must work
    as an accessor to the interpreter database when both getting
    and storing an interpreter pointer

2018-02-28 Massimo Manghi <mxmanghi@apache.org>
    * Makefile.am: default_request_handler.tcl and init.tcl can be
    installed without the exec bit set

2018-02-17 Massimo Manghi <mxmanghi@apache.org>
    * NOTICE: update copyright statement
    * src/mod_rivet_ng/worker_prefork_common.c: Rivet_CleanupProcessor
    to call RivetCache_Cleanup
    * doc/rivet.xml: new version in docs

2018-02-08 Massimo Manghi <mxmanghi@apache.org>
    * VERSION,configure.ac: bumping version to 3.0.2

2018-02-08 Ronnie Brunner <ronnie@apache.org>
    * doc/apachetest.tcl: make independent from TclX adding
    our own 'kill' procedure. Changing signal to stop the
    http webserver as KILL
    * doc/runtests.tcl: removing depend on the prefork module

2018-02-03 Massimo Manghi <mxmanghi@apache.org>
    * src/librivet/rivetPkgInit.c: changing way we determine the
    namespace pointer in order to avoid the necessity of gaining 
    access to the module globals and therefore avoid including 
    mod_rivet.h. The macro APLOG_USE_MODULE introduced in