@@ -1,3 +1,7 @@
+2018-08-07 Massimo Manghi <mxmanghi@apache.org>
+    * rivet/init.tcl: reflecting the changes in init.tcl.in 
+    * doc/rivet.xml: removed subversion related keyword
+
 2018-08-16 Massimo Manghi <mxmanghi@apache.org>
     * .gitignore: add file copied from master
     * doc/rivet.xml.in: removed no more supported SVN keywords
